# GLFW_CMake_Template

./: CMakeLists.txt
Depends/Include/glad/: glad.h
Depends/Sources/glad/: glad.c
src/: main.cpp
